0022953: strcat expects null-terminated destination string